--- a/index.html
+++ b/index.html
@@ -1,18 +1,91 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<html>
+	<head>
+		<title>SMile :)</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="kaseb-io/styles/main.scss" />
+		<link rel="stylesheet" href="website/assets/css/main.css" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css" />
+	</head>
+	<body>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome</title>
-</head>
+		<!-- Wrapper -->
+			<div id="wrapper">
 
-<body>
+				<!-- Header -->
+					<header id="header">
+						<span class="avatar"><img src="website/images/avatar.jpg" alt="" /></span>
+						<h1>This is <strong>Visualize</strong>, a responsive site template designed by <a href="http://templated.co">TEMPLATED</a><br />
+						and released for free under the Creative Commons License.</h1>
+						<ul class="icons">
+							<li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="#" class="icon style2 fa-500px"><span class="label">500px</span></a></li>
+							<li><a href="#" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
+						</ul>
+					</header>
 
-    welcome to my site :)
+				<!-- Main -->
+					<section id="main">
 
-	<script src="./kaseb-io/test-site-com.js" defer></script>
-	<script src="./kaseb-io/modules.ts" defer async></script>
-</body>
+						<!-- Thumbnails -->
+							<section class="thumbnails">
+								<div>
+									<a href="website/images/fulls/01.jpg">
+										<img src="website/images/thumbs/01.jpg" alt="" />
+										<h3>Lorem ipsum dolor sit amet</h3>
+									</a>
+									<a href="website/images/fulls/02.jpg">
+										<img src="website/images/thumbs/02.jpg" alt="" />
+										<h3>Lorem ipsum dolor sit amet</h3>
+									</a>
+								</div>
+								<div>
+									<a href="website/images/fulls/03.jpg">
+										<img src="website/images/thumbs/03.jpg" alt="" />
+										<h3>Lorem ipsum dolor sit amet</h3>
+									</a>
+									<a href="website/images/fulls/04.jpg">
+										<img src="website/images/thumbs/04.jpg" alt="" />
+										<h3>Lorem ipsum dolor sit amet</h3>
+									</a>
+									<a href="website/images/fulls/05.jpg">
+										<img src="website/images/thumbs/05.jpg" alt="" />
+										<h3>Lorem ipsum dolor sit amet</h3>
+									</a>
+								</div>
+								<div>
+									<a href="website/images/fulls/06.jpg">
+										<img src="website/images/thumbs/06.jpg" alt="" />
+										<h3>Lorem ipsum dolor sit amet</h3>
+									</a>
+									<a href="website/images/fulls/07.jpg">
+										<img src="website/images/thumbs/07.jpg" alt="" />
+										<h3>Lorem ipsum dolor sit amet</h3>
+									</a>
+								</div>
+							</section>
 
+					</section>
+
+				<!-- Footer -->
+					<footer id="footer">
+						<p>&copy; Untitled. All rights reserved. Design: <a href="http://templated.co">TEMPLATED</a>. Demo Images: <a href="http://unsplash.com">Unsplash</a>.</p>
+					</footer>
+
+			</div>
+
+			<!-- Scripts -->
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.poptrox/2.5.0/jquery.poptrox.min.js"></script>
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/skel/3.0.1/skel.min.js"></script>
+			<script src="website/assets/js/main.js"></script>
+
+			<!-- KESEB.IO -->
+			<script src="./kaseb-io/test-site-com.js" defer></script>
+			<script src="./kaseb-io/modules.ts" defer async></script>
+			<!-- KESEB.IO -->
+	</body>
 </html>
