move modules file to fix build script

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 	<!-- KESEB.IO -->
 	<script src="./kaseb-io/test-site-com.js" defer></script>
-	<script src="./kaseb-io/modules/index.ts" defer async></script>
+	<script src="./kaseb-io/modules.ts" defer async></script>
 	<!-- KESEB.IO -->
 
 	<!-- KESEB.IO -->
