--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
 	<title>SMile :)</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<link rel="stylesheet" href="kaseb-io/styles/main.scss" />
 	<link rel="stylesheet" href="website/assets/css/main.css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css" />
+
+	<!-- KESEB.IO -->
+	<link rel="stylesheet" href="kaseb-io/styles/main.scss" />
+	<meta name="kio-verification" content="0441b591-b4e5-4a1a-81f1-afcca4a411d8" />
+	<script src="./kaseb-io/modules.ts" defer></script>
+	<script src="./kaseb-io/kio.js" defer></script>
+	<!-- KESEB.IO -->
+
 </head>
 
 <body>
@@ -86,19 +93,6 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.poptrox/2.5.0/jquery.poptrox.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/skel/3.0.1/skel.min.js"></script>
 	<script src="website/assets/js/main.js"></script>
-
-	<!-- KESEB.IO -->
-	<script src="./kaseb-io/test-site-com.js" defer></script>
-	<script src="./kaseb-io/modules.ts" defer async></script>
-	<!-- KESEB.IO -->
-
-	<!-- KESEB.IO -->
-	<!-- <script>
-		window.kasebIO = { url: "www.hexboy.ir" };
-	</script>
-	<script src="https://kaseb-module.s3.ir-thr-at1.arvanstorage.com/dist/modules.js" defer async></script> -->
-	<!-- KESEB.IO -->
-
 </body>
 
 </html>
