--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 	<link rel="stylesheet" href="website/assets/css/main.css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css" />
 
-	<!-- KESEB.IO -->
-	<link rel="stylesheet" href="kaseb-io/styles/main.scss" />
+	<!-- KESEB.XYZ -->
+	<link rel="stylesheet" href="kaseb-xyz/styles/main.scss" />
 	<meta name="kio-verification" content="0441b591-b4e5-4a1a-81f1-afcca4a411d8" />
-	<script src="./kaseb-io/modules.ts" defer></script>
-	<script src="./kaseb-io/kio.js" defer></script>
-	<!-- KESEB.IO -->
+	<script src="./kaseb-xyz/modules.ts" defer></script>
+	<script src="./kaseb-xyz/kio.js" defer></script>
+	<!-- KESEB.XYZ -->
 
 </head>
 
