get site id from sript url instead meta tag

--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css" />
 
 	<!-- KESEB.XYZ -->
+	<!-- <script src="https://dev.mykaseb.ir/kio.js?id=9d06c87e-7578-4715-a088-47b0eb20f64d" defer></script> -->
+	<!-- KESEB.XYZ -->
+
+	<!-- KESEB.XYZ -->
 	<link rel="stylesheet" href="kaseb-xyz/styles/main.scss" />
-	<meta name="kio-verification" content="0441b591-b4e5-4a1a-81f1-afcca4a411d8" />
 	<script src="./kaseb-xyz/modules.ts" defer></script>
-	<script src="./kaseb-xyz/kio.js" defer></script>
+	<script src="./kaseb-xyz/kio.js?id=9d06c87e-7578-4715-a088-47b0eb20f64d" defer></script>
 	<!-- KESEB.XYZ -->
 
 </head>
